# NeuTimetable

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RunApp.bat  RunApp.sh  build_dist.bat  neuscraper_ui.spec
resources/static/images/: css.css  index.css
resources/static/js/plugins/jquery.subscribe_/js/struts2/: jquery.struts2_jquery.ui.struts2.js
resources/static/scripts/: TaskActivity.js  backbone.min.js  danymicfix.js  highcharts.js  jquery.cookie.js  jscroll.js  menu.js  require.config.js  require.js  semesterCalendar.js  underscore.min.js  underscore.string.js  underscore.string.min.js
resources/static/scripts/beangle/: beangle_beangle-ui.js
resources/static/scripts/i18n/zh_CN/: WdatePicker.js
resources/static/scripts/jquery/: jquery_jquery.ui.core.js
resources/static/scripts/my97/: My97DatePicker.htm  WdatePicker-4.72.js  calendar.js  config.js
resources/static/scripts/plugins/: jquery-form_jquery-history_jquery-colorbox_jquery-chosen.js
resources/static/themes/default/: beangle-ui_colorbox_chosen.css  home.css
resources/static/themes/default/css/: semesterCalendar.css
src/: CourseTableGUI.cpp  NeuCourseTabel.cpp  main_gui.py  neuscraper_ui.py  web_server.py
